# DotTex-Editor

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: db.rs  init_db.rs  mod.rs
src-tauri/src/latex/: compile_latex.rs  mod.rs
src/components/: Console.tsx  EmptyEditor.tsx  Explorer.tsx  Filetab.tsx  Sidebar.tsx  Titlebar.tsx
src/components/Dropdowns/: EditDropdown.tsx  FileDropdown.tsx  FileTreeContextMenu.tsx  RunDropdown.tsx
src/components/panels/: Console.tsx  FileTree.tsx  Preview.tsx  Search.tsx
src/components/ui/: button.tsx
src/hooks/: useTectonicLogs.ts
src/stores/: consoleStore.ts  editorStore.ts  useFileStore.ts
src/utils/: FileTreeUtils.ts  OpenCreateProject.tsx  OpenProject.tsx  useProjectActions.ts
