[package]
name = "DotTex"
version = "1.0.0"
description = "DotTex is a lightweight, all-in-one LaTeX IDE built with Tauri, featuring Monaco Editor and Tectonic for fast, zero-configuration compilation—everything you need to write, compile, and preview LaTeX in a single app."
authors = ["Aourar Abdelouahab", "Trari Mohammed El Mehdi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dot_tex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
dirs-next = "2"
